# blitzware-cpp-sdk

./: CMakeLists.txt  blitzware-cpp-sdk.sln
blitzware-cpp-example/: blitzware-cpp-example.cpp  blitzware-cpp-example.vcxproj  blitzware-cpp-example.vcxproj.filters
blitzware-cpp-sdk/: BlitzWareAuth.h  BlitzWareAuthManager.cpp  BlitzWareAuthTypes.h  CMakeLists.txt  blitzware-cpp-sdk.vcxproj  blitzware-cpp-sdk.vcxproj.filters
